# biglinux-systemd-swap-gui

./: .gitignore  default.nix  flake.nix  pyproject.toml
.github/workflows/: translate-and-build-package.yml
locale/: bg.po  cs.po  da.po  de.po  el.po  en.po  es.po  et.po  fi.po  fr.po  he.po  hr.po  hu.po  is.po  it.po  ja.po  ko.po  nl.po  no.po  pl.po  pt.po  ro.po  ru.po  sk.po  sv.po  tr.po  uk.po  zh.po
pkgbuild/: PKGBUILD
src/biglinux_swap/: __init__.py  __main__.py  application.py  config.py  i18n.py  main.py  services.py  utils.py  window.py
src/biglinux_swap/ui/: __init__.py  base_view.py  components.py  main_view.py  memory_chart.py  settings_view.py  unified_view.py  welcome_dialog.py
usr/share/applications/: br.com.biglinux.swap.desktop  org.biglinux.swap.desktop
